--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="action_home">Home</string>
     <string name="create_shopping_list">Create Shopping List</string>
     <string name="title_activity_create_list">Create Shopping List</string>
+    <string name="date">Date</string>
+    <string name="store">Store</string>
+    <string name="name">Name</string>
 
 </resources>
