--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,14 @@
     <string name="title_activity_view_list">View_List</string>
     <string name="add_item">Add Item</string>
     <string name="title_activity_additem">Add item</string>
-
+    <string name="action_view_list">View List</string>
+    <string-array name="quantities">
+        <item></item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
 
 </resources>
