--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="title_activity_view_item">View Item</string>
     <string name="delete_item">Delete Item</string>
     <string name="action_add_item">action_add_item</string>
+    <string name="delete_list">Delete List</string>
 
 
 </resources>
